--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                 rtServer (
                     id: "ARTIFACTORY_SERVER",
                     url: 'https://rajith.jfrog.io/artifactory',
-                    credentialsId: 0bde53a0-d8b4-4b40-b51c-b6859aee8123'
+                    credentialsId: '0bde53a0-d8b4-4b40-b51c-b6859aee8123'
                 )
             }
         }
