--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -5,7 +5,9 @@ pipeline {
         stage ('Clone') {
             steps {
                 //git branch: 'master', url: "https://github.com/jfrog/project-examples.git"
-                git branch: 'main', url: 'https://github.com/RajithSangireddy/docker-base-image-scanner.git'
+                script{
+                    git branch: 'main', url: 'https://github.com/RajithSangireddy/docker-base-image-scanner.git'
+                }
             }
         }
 
