--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
         stage ('Build docker image') {
             steps {
                 script {
-                    docker.build('artifact-docker-dev-local-scanned/hello-world:latest', '-f ./Jfrog-test/ .')
+                    sudo docker.build('artifact-docker-dev-local-scanned/hello-world:latest', '-f ./Jfrog-test/ .')
                 }
             }
         }
