--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -34,12 +34,18 @@ pipeline {
                 '''
             }
         }
+        
+        stage('Test'){
+            steps {
+                 echo 'Empty'
+            }
+        }
 
         stage ('Push image to Artifactory') {
             steps {
                 rtDockerPush(
                     serverId: "ARTIFACTORY_SERVER",
-                    image: ARTIFACTORY_DOCKER_REGISTRY + '/hello-world:latest',
+                    image: "$file:$file",
                     // Host:
                     // On OSX: "tcp://127.0.0.1:1234"
                     // On Linux can be omitted or null
