--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
             }
         }
         
-        stage('Test'){
+        stage('Test1'){
             steps {
                  echo 'Empty'
             }
