--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
             steps {
                 rtDockerPush(
                     serverId: "ARTIFACTORY_SERVER",
-                    image: "$file:$file",
+                    image: 'hello-world:latest',
                     // Host:
                     // On OSX: "tcp://127.0.0.1:1234"
                     // On Linux can be omitted or null
