--- a/Jfrog-test/Jenkinsfile
+++ b/Jfrog-test/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
                     // Host:
                     // On OSX: "tcp://127.0.0.1:1234"
                     // On Linux can be omitted or null
-                    host: HOST_NAME,
+                    //host: HOST_NAME,
                     targetRepo: 'artifact-docker-dev-local-scanned',
                     // Attach custom properties to the published artifacts:
                     properties: 'project-name=docker1;status=stable'
